# linkedoc

./: LICENSE  README.md
client/: package.json  pnpm-lock.yaml  tailwind.config.ts
client/src/app/: layout.tsx  page.tsx
client/src/app/documents/: page.tsx
client/src/app/documents/[id]/: page.tsx
client/src/app/documents/new/: page.tsx
client/src/components/: button.tsx  sidebar.tsx
client/src/hooks/: use-fetch.ts
server/: Cargo.toml
server/src/: controllers.rs  initialize.rs  main.rs
server/src/controllers/: document.rs  initialize.rs
server/src/models/: config.rs  document.rs
