[package]
name = "linkedoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
chrono = { version = "0.4.34", features = ["serde"] }
dirs = "5.0.1"
# derive フィーチャーはコード生成のための機能を提供する
# serde が #[derive] アトリビュートを使用して自動的にシリアライズおよびデシリアライズのコードを生成できる
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
